src/objects/ThoughtStarter_RFP__c.object
<CustomObject>
    <fields>
        <fullName>Account_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Account Strategist</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ThoughtStarters_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Explanation__c</fullName>
        <label>Action(s) Explanation:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_Goals__c</fullName>
        <label>Advertiser Goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Exposure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Exposure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Questionable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Questionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTR__c</fullName>
        <label>CTR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Category__c</fullName>
        <label>Campaign Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency &gt; Agency &gt; Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive &gt; Automotive &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Accessories &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Baby Fashion &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Bridal Fashion &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Children&apos;s Clothing &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; General Fashion &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Jewelry &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Maternity Fashion &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Shoes &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &gt; Shoes &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance &gt; Finance and Insurance &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floral &gt; Floral &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; Baby Food &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; General Food &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Beverage &gt; Wine and Spirits &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Baby Health &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Beauty &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; General Health &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Hospital &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Beauty &gt; Pharmaceutical &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Baby Gear &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Electronics &gt; Non-Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Furnishings &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; General Home &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Home Improvement &gt; Home Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Real Estate &gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Registry &gt; Baby Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Registry &gt; Bridal Endemic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &gt; Tabletop &gt; Bridal Endemic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Timing_Flight__c</fullName>
        <label>Campaign Timing/Flight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Objectives__c</fullName>
        <label>Client Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Action__c</fullName>
        <label>Cost Per Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Click__c</fullName>
        <label>Cost Per Click</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Lead__c</fullName>
        <label>Cost Per Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <picklist>
            <picklistValues>
                <fullName>Word (.doc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPoint (.ppt)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Due_Date__c</fullName>
        <label>Desired Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_to_Client__c</fullName>
        <label>Due to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Targeting_Details__c</fullName>
        <label>Geo-Targeting Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Due_Date__c</fullName>
        <label>Internal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Channel__c</fullName>
        <label>Marketing Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiple_Spends__c</fullName>
        <label>Multiple Spends</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Actions__c</fullName>
        <label># of Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Op_ins__c</fullName>
        <label># of Op-ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sales__c</fullName>
        <label># of Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>ThoughtStarters_RFPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to Advertiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remnant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Sales Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>TSRP-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Related_ThoughtStarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related ThoughtStarter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ThoughtStarter_RFP__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ThoughtStarter</value>
            </filterItems>
            <filterItems>
                <field>ThoughtStarter_RFP__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ThoughtStarter_RFP__c</referenceTo>
        <relationshipLabel>ThoughtStarters / RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Formal RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ThoughtStarter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Dev_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Dev Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Developer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Sales Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ThoughtStarters_RFPs_SalesDev</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2817</description>
        <label>Sales Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ThoughtStarters_RFPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spend_Type__c</fullName>
        <label>Spend Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incremental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if you are ready to submit the ThoughtStarter/RFP for materials development</inlineHelpText>
        <label>Submitted for Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Targeting__c</fullName>
        <label>User Targeting</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Stage Targeting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>ThoughtStarter / RFP</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ThoughtStarters / RFPs</pluralLabel>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <label>RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThoughtStarter</fullName>
        <active>true</active>
        <label>ThoughtStarter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Strategist_Required_in_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Opportunity__r.AccStrategist__c )</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Related Opportunity must have an Account Strategist!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campaign_Start_Date_and_End_Date</fullName>
        <active>true</active>
        <description>Campaign Start Date must be before Campaign End Date</description>
        <errorConditionFormula>Campaign_Start_Date__c &gt; Campaign_End_Date__c</errorConditionFormula>
        <errorDisplayField>Campaign_End_Date__c</errorDisplayField>
        <errorMessage>Campaign Start Date can&apos;t be after Campaign End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Internal_Due_Date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Internal_Due_Date__c ) &amp;&amp; ( Internal_Due_Date__c &lt;= TODAY() + 1)</errorConditionFormula>
        <errorDisplayField>Internal_Due_Date__c</errorDisplayField>
        <errorMessage>Cannot choose a date within 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_must_have_product</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name == &apos;RFP&apos; &amp;&amp; ISBLANK(Opportunity__r.Pricebook2Id)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Related Opportunity must have a pricebook selected before an RFP can be created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Please_fill_in_a_Success_Metric</fullName>
        <active>true</active>
        <description>Success Metric Detail Validation</description>
        <errorConditionFormula>OR(
AND(Clicks__c, ISBLANK( CTR__c ), ISBLANK(Cost_Per_Click__c)), 
AND(End_Actions__c, ISBLANK(No_of_Sales__c), ISBLANK(Total_Sales__c), ISBLANK(No_of_Actions__c), ISBLANK(Cost_Per_Action__c), ISBLANK( Action_Explanation__c )),
AND(Leads__c, ISBLANK(No_of_Op_ins__c), ISBLANK(Cost_Per_Lead__c)),
AND(Brand_Exposure__c, ISBLANK(Other__c), ISBLANK(Marketing_Channel__c))
)</errorConditionFormula>
        <errorMessage>Please fill in the details for Clicks, End Actions, Leads or Brand Exposure Success Metric, if the relating checkbox is selected!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Dev_Needed_for_Custom_Content</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(Sales_Dev_Needed__c) &amp;&amp; NOT(Sales_Dev_Needed__c) &amp;&amp; Custom_Content__c</errorConditionFormula>
        <errorDisplayField>Sales_Dev_Needed__c</errorDisplayField>
        <errorMessage>Sales Dev Needed is required if an RFP needs Custom Content</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Success_Metric_Required</fullName>
        <active>true</active>
        <description>Must fill in one of the Success Metric section</description>
        <errorConditionFormula>AND(NOT(Clicks__c), NOT(End_Actions__c), NOT(Leads__c), NOT(Brand_Exposure__c))</errorConditionFormula>
        <errorMessage>Please fill in a Success Metric to give Account Strategist more details!</errorMessage>
    </validationRules>
</CustomObject>